[package]
name = "rust-sdl2"
version = "0.1.0"
edition = "2021"

[features]
default = []
# If debug is enabled, additional performance metrics, e.g. frames taking longer
# than expected, are printed to stdout.
debug = []

[dependencies]
rand = "0.8.5"
tinyrand = "0.5.0"

[dependencies.sdl2]
version = "0.35"
features = ["image", "unsafe_textures"]